--- a/css/styles.css
+++ b/css/styles.css
@@ -24,12 +24,12 @@ html {
   outline: 0;
 }
 
-/* bTopbtn */
+/* Topbtn */
 #scrollToTopBtn {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  display: none;
+  /* display: none; */
   /* 初始隱藏按鈕 */
   padding: 10px 20px;
   font-size: 18px;
@@ -149,8 +149,7 @@ body {
 
 /* 經過時的樣式 */
 .aside-item a:hover {
-  color: #ff9203; /* 經過時顏色變為淺灰色 */
-
+  color: #ff9203; 
 }
 
 /* 活動狀態樣式 */
@@ -294,4 +293,62 @@ a:active {
 .productName a:hover {
   color: #504e4e7f; /* 經過時顏色變為淺灰色 */
 
+}
+
+/* 加入購物車按鈕的樣式 */
+.TocartBtn {
+  padding: 10px 20px;
+  background-color: #555e57;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.TocartBtn:hover {
+  background-color: #7e8680;
+  transform: scale(1.05);
+}
+
+.TocartBtn:active {
+  background-color: #1c1f1d;
+  transform: scale(1.02);
+}
+
+
+#cartBtn {
+  position: fixed;
+  bottom: 80px;
+  right: 25px;
+  /* display: none; */
+  /* 初始隱藏按鈕 */
+  padding: 10px 20px;
+  font-size: 18px;
+  background-color: rgb(245, 197, 94);
+  color: white;
+  border: none;
+  border-radius: 50px;
+  /* 更圓的按鈕 */
+  cursor: pointer;
+  z-index: 1000;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  /* 添加陰影 */
+  transition: background-color 0.3s, transform 0.3s;
+  /* 添加過渡效果 */
+}
+
+#cartBtn:hover {
+  background-color: #f0a22e;
+  transform: scale(1.1);
+  /* 放大效果 */
+}
+
+#cartBtn:active {
+  background-color: #ff7b00;
+  /* 按下時的顏色 */
+  transform: scale(1);
+  /* 恢復原來大小 */
 }
